--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "webpack": "^2.5.1",
