--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.3",
     "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.2.1",
