--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "add-asset-html-webpack-plugin": "^2.1.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -38,11 +38,6 @@
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "webpack": "^2.5.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-uglify-js-plugin": "^1.1.9",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -54,17 +49,23 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.3",
+    "css-loader": "^0.28.10",
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.2.1",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "flow-bin": "^0.53.1",
     "flow-typed": "^2.1.5",
-    "html-webpack-plugin": "^2.28.0",
-    "style-loader": "^0.18.1"
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
+    "style-loader": "^0.18.1",
+    "webpack": "^4.0.0-beta.3",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-dev-server": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-uglify-js-plugin": "^1.1.9"
   }
 }
